Adds classification